main Implement JsonCharacterIterator